# rust-snipperts

./: README.md
1.2_formatted_print/: formatted_print.rs
10_modules/: struct_visibility.rs
11_crates/: executable.rs
12_cargo/12.1_dependencies/baz/src/: lib.rs
12_cargo/bar/src/: lib.rs
12_cargo/baz/src/: lib.rs
12_cargo/baz/tests/: my_test.rs
12_cargo/foo/: Cargo.toml
12_cargo/foo/src/: main.rs
13_attributes/: cfg.rs
14_generics/: bounds-1.rs  bounds-2.rs  implementation.rs  multiple-bounds.rs  traits.rs
15_scoping_rules/: borrowing.rs  borrowing_aliasing.rs  borrowing_mutability.rs  elision.rs  lifetime_structs  lifetime_structs.rs  lifetime_traits.rs  ownsership_and_moves.rs  ownsership_mutability.rs  raii.rs
16_traits/: clone.rs  derive-2.rs  disambiguating.rs  drop.rs  trait-2.rs  trait.rs
17_macro_rules/: designators.rs  macros.rs
18_error_handling/: abort.rs  get_or_insert.rs  option_unwrap.rs  option_unwrap_question_mark.rs  unwind.rs
2.2_tuples/: tuples  tuples.rs
3.1_structures/: structures.rs
3.3_constants/: constants.rs
4.2_scope_and_shadowing/: scope.rs
5.1_casting/: casting.rs
5.2_literals/: literals.rs
6.2_tryfrom_tryinto/: tryfrom_tryinto.rs
8_flow_control/: for_into_iter.rs  for_iter.rs  for_iter_mut.rs  if_let.rs
9_functions/: functions.rs
9_functions/9.1_associated_functions_and_methods/: methods.rs
9_functions/9.2_closures/: closures.rs
9_functions/9.2_closures/9.2.1_capturing/: capturing.rs
9_functions/9.3_higher_order_functions/: hof.rs
std/: path  path.rs
